调整docker和naocs配置